styles/projects.css
/* --------------- */
/* Document entier */
/* --------------- */
::selection
{
	/* Sélection du texte */
	background: rgb(158, 103, 13);
}

/* ------- */
/* En-tête */
/* ------- */
header
{
	background-image: linear-gradient(to right, rgb(158, 103, 13), rgb(255, 158, 0));
}

header > img
{
	/* Vagues marquant la fin de l'en-tête */
	transform: translateY(-27.5%);
}

/* Barre de navigation */
nav > ul
{
	background-color: rgba(255, 158, 0, 0.7);
}

/* ------- */
/* Projets */
/* ------- */
article
{
	/* Corps de chaque projet */
	margin: 0 5% 1.5rem 5%;
	padding: 2rem;

	color: white;
	text-align: right;

	box-shadow: 0 1rem 2rem -1rem rgba(0, 0, 0, 0.25);
	border-radius: 1rem;
	background-color: rgb(39, 39, 42);
}

article:last-of-type
{
	margin-bottom: 5%;
}

@media screen and (min-width: 1024px)
{
	/* Modification des marges sur les grands écrans */
	article
	{
		margin-left: 15%;
		margin-right: 15%;
	}
}

article:first-of-type
{
	/* Ajout d'une marge uniquement au premier projet */
	margin-top: calc(7.5% + 5rem);
}

article hr
{
	/* Séparateur entre les parties de
		chaque projets */
	margin: 1rem 0 1rem 0;
	border-color: rgb(63, 63, 70);
}

/* ------------------- */
/* Projet : propriétés */
/* ------------------- */
article div.properties > h2
{
	/* Nom du projet */
	overflow: hidden;
	font-size: 2rem;
	text-align: left;
	margin-bottom: 0;
}

article div.properties > h3
{
	/* Date du projet */
	margin-top: 0.5rem;
	text-align: left;
	text-indent: 1rem;
}

article div.properties > p
{
	/* Description du projet */
	color: rgb(161, 161, 170);
	text-align: justify;
	line-height: 1.5rem;
}

article div.properties > img
{
	/* Icône du projet */
	float: left;
	height: 4rem;
	margin-right: 2rem;
}

@media screen and (max-width: 768px)
{
	/* Alignement des propriétés du projet
	au centre sur les petits écrans */
	article div.properties > h2, article div.properties > h3
	{
		/* Nom et date */
		text-align: center;
	}

	article div.properties > img
	{
		/* Icône */
		float: none;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
}

/* ----------------------- */
/* Projet : galerie photos */
/* ----------------------- */
article div.images
{
	/* Conteneur de la galerie photos */
	text-align: center;
}

article div.images div
{
	/* État initial de la galerie photos */
	width: calc(100% - 2rem);
	margin: 0.5rem;
	border: 1px solid grey;
	display: inline-block;
	min-width: 170px;
	max-width: 400px;
	background-color: rgb(24, 24, 27);
}

@media screen and (min-width: 768px)
{
	/* Adaptation de la taille du conteneur des
		photos sur les grands écrans */
	article div.images div
	{
		width: calc(50% - 4rem);
	}
}

@media screen and (pointer: fine) and (hover: hover)
{
	/* On affiche un effet de sélection des photos
		pour les affichages sur ordinateurs uniquement */
	article div.images div
	{
		transition: border 300ms ease-in-out;
	}

	article div.images div:hover
	{
		border: 1px solid white;
	}
}

article div.images div img
{
	/* Adaptation des dimensions des photos
		à celles du conteneur */
	width: 100%;
	height: auto;
}

article div.images div p
{
	/* Ajustement de la position de la légende */
	padding: 1rem;
	word-break: break-word;
	text-align: center;
}

/* ------------------------ */
/* Projet : icônes langages */
/* ------------------------ */
article div.languages img
{
	/* Icônes des langages utilisés */
	height: 2.5rem;
	margin-left: 1.5rem;
}

/* ----- */
/* Liens */
/* ----- */
article a:active, li a:active
{
	/* Passage progressif en orange lors de l'appui
		(active + hover) */
	background: rgb(158, 103, 13);
}

